[package]
name = "streamhub"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "It receives streams from publishers(rtmp/rtsp etc.) and send streams to subscribers(rtmp/rtsp/httpflv/hls)"

[dependencies]
log = "0.4"
rand = "0.9"
bytes = "1.0"
failure = "0.1"
byteorder = "1.4"
indexmap = "2.12"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
reqwest = { version = "0.12", features = ["native-tls-vendored"] }
tokio = { version = "1.4", default-features = false, features = ["full"] }
serde_json = { version = "1", default-features = false, features = [
  "alloc",
  "raw_value",
  "std",
] }

xflv = { path = "../flv" }
bytesio = { path = "../bytesio" }
